--- a/Pipfile
+++ b/Pipfile
@@ -3,10 +3,15 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "https://download.pytorch.org/whl/cpu"
+verify_ssl = true
+name = "downloadpytorch"
+
 [packages]
-torch = "*"
 numpy = "*"
 torchvision = "*"
+torch = {version = "==2.0.1+cpu", index = "downloadpytorch"}
 
 [dev-packages]
 
